// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CUnit decorators should add CUnit metadata to a class when decorating a method with @CUnit 1`] = `
Array [
  DecoratorFactory {
    "name": "default",
  },
]
`;

exports[`CUnit decorators should add CUnit metadata to a class when decorating multiple times with @CUnit 1`] = `
Array [
  DecoratorFactory {
    "name": "default2",
  },
  DecoratorFactory {
    "name": "default",
  },
]
`;

exports[`DecoratorFactory decorators 1`] = `
Array [
  DecoratorFactory {
    "name": undefined,
    "options": undefined,
  },
  DecoratorFactory {
    "autobind": false,
    "id": [Function],
    "type": "EntityTypeOrm",
  },
]
`;

exports[`DecoratorFactory decorators 2`] = `
Array [
  DecoratorFactory {},
  DecoratorFactory {
    "autobind": false,
    "id": [Function],
    "type": "EntityTypeOrm",
  },
]
`;
